<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/resultEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/result"
        android:textSize="32sp"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button07"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button08"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button09"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnDIV"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonDIV"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button04"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button05"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button06"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnMULT"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonMULT"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button01"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button02"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button03"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnADD"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonADD"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnCE"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonCE"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/button00"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnDOT"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonDOT"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnSUB"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonSUB"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnEQ"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/buttonEQ"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />
    
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:constraint_referenced_ids="
        btn7,btn8,btn9,btnDIV,
        btn4,btn5,btn6,btnMULT,
        btn1,btn2,btn3,btnADD,
        btnCE,btn0,btnDOT,btnSUB,
        btnEQ"
        app:flow_horizontalGap="6dp"
        app:flow_horizontalStyle="spread_inside"
        app:flow_maxElementsWrap="4"
        app:flow_verticalGap="16dp"
        app:flow_verticalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>
